# sos-app

./: .editorconfig  .env.example  .eslintrc.json  .gitignore  AWS-DEPLOYMENT-STATUS.md  AWS-QUICK-START.md  AWS_MIGRATION_GUIDE.md  CONTRIBUTING.md  DEPLOYMENT-SUMMARY.md  DEPLOYMENT_SESSION_2025-11-06.md  DOCKER_BUILD_FIX.md  DOCKER_DEPLOYMENT.md  DOCKER_QUICK_START.md  DOCKER_SETUP.md  DOCKER_SOLUTIONS.md  GCP-QUICK-START.md  INFRASTRUCTURE_FIX_PLAN.md  INFRASTRUCTURE_IMPLEMENTATION.md  INFRASTRUCTURE_SUMMARY.md  MINIKUBE_GUIDE.md  QUICKSTART.md  README-LOCAL-DEPLOYMENT.md  README.md  TESTING_WEBSITE_GUIDE.md  aws-create-eks-cluster.sh  cleanup-all-resources.sh  deploy-minikube.sh  deploy-to-aws.sh  docker-compose-light.yml  docker-compose.prod.yml  docker-compose.yml  eks-cluster-config.yaml  github-actions-policy.json  stop-services.sh  test-services-k8s.sh  test-services.sh  tsconfig.base.json
.github/: CODEOWNERS  dependabot.yml
docker/: init-db.sql
k8s/: README.md
scripts/: docker-build.sh  docker-clean.sh  docker-down.sh  docker-logs.sh  docker-rebuild.sh  docker-up-light.sh  docker-up.sh
services/llm-service/: pyproject.toml
services/llm-service/app/: __init__.py
services/llm-service/app/cache/: redis_cache.py
services/llm-service/app/models/: __init__.py
services/llm-service/app/routes/: __init__.py
services/llm-service/app/services/: __init__.py  llm_orchestrator.py
services/llm-service/tests/: test_llm_service.py
sos-app/: .env.example  .prettierignore  AWS-COST-COMPARISON.md  CLOUD-COMPARISON.md  DEPLOYMENT.md  DOCKER_GUIDE.md  LICENSE  (+27 more)
(+921 files in other folders)
