[tool.poetry]
name = "sos-llm-service"
version = "1.0.0"
description = "SOS App LLM Service - AI-powered emergency assessment and first aid guidance"
authors = ["SOS App Team"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.109.0"
uvicorn = {extras = ["standard"], version = "^0.27.0"}
pydantic = "^2.5.3"
pydantic-settings = "^2.1.0"
langchain = "^0.1.4"
langchain-openai = "^0.0.5"
langchain-anthropic = "^0.0.2"
openai = "^1.10.0"
anthropic = "^0.9.0"
python-dotenv = "^1.0.0"
redis = "^5.0.1"
httpx = "^0.26.0"
python-json-logger = "^2.0.7"
presidio-analyzer = "^2.2.33"
presidio-anonymizer = "^2.2.33"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.4"
pytest-asyncio = "^0.23.3"
pytest-cov = "^4.1.0"
black = "^23.12.1"
ruff = "^0.1.13"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ['py311']

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
